force-app/main/default/objects/aig_AI_Use_Case__c/aig_AI_Use_Case__c.object-meta.xml
<CustomObject>
    <label>AI Use Case</label>
    <nameField>
        <displayFormat>UC-{0000000}</displayFormat>
        <label>AI Use Case Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Use Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>