force-app/main/default/objects/aig_AI_Use_Case__c/fields/aig_Account__c.field-meta.xml
<CustomField>
    <fullName>aig_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AI Use Cases</relationshipLabel>
    <relationshipName>aig_AI_Use_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>