force-app/main/default/objects/aig_AI_Use_Case__c/fields/aig_Acquisition_Development_Began_Date__c.field-meta.xml
<CustomField>
    <fullName>aig_Acquisition_Development_Began_Date__c</fullName>
    <label>Acquisition/Development Began Date</label>
    <type>Date</type>
</CustomField>