force-app/main/default/objects/aig_AI_Use_Case__c/fields/aig_AI_System_Output__c.field-meta.xml
<CustomField>
    <fullName>aig_AI_System_Output__c</fullName>
    <label>AI System&apos;s Output(s)</label>
    <type>TextArea</type>
</CustomField>