force-app/main/default/objects/aig_AI_Use_Case__c/fields/aig_App__c.field-meta.xml
<CustomField>
    <fullName>aig_App__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>App</label>
    <referenceTo>aig_AI_Application_Implementation__c</referenceTo>
    <relationshipLabel>AI Use Cases</relationshipLabel>
    <relationshipName>aig_AI_Use_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>