force-app/main/default/objects/aig_AI_Use_Case__c/fields/aig_Contact_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>aig_Contact_Email_Address__c</fullName>
    <label>Contact Email Address</label>
    <type>Email</type>
</CustomField>