force-app/main/default/objects/aig_AI_Use_Case__c/fields/aig_Date_Implemented__c.field-meta.xml
<CustomField>
    <fullName>aig_Date_Implemented__c</fullName>
    <label>Date Implemented</label>
    <type>Date</type>
</CustomField>