force-app/main/default/objects/aig_AI_Use_Case__c/fields/aig_Date_Initiated__c.field-meta.xml
<CustomField>
    <fullName>aig_Date_Initiated__c</fullName>
    <label>Date Initiated</label>
    <type>Date</type>
</CustomField>