force-app/main/default/objects/aig_AI_Use_Case__c/fields/aig_Date_Retired__c.field-meta.xml
<CustomField>
    <fullName>aig_Date_Retired__c</fullName>
    <label>Date Retired</label>
    <type>Date</type>
</CustomField>