force-app/main/default/objects/aig_AI_Use_Case__c/fields/aig_Description__c.field-meta.xml
<CustomField>
    <fullName>aig_Description__c</fullName>
    <description>Detailed Description of the Use Case</description>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>