force-app/main/default/objects/aig_AI_Use_Case__c/fields/aig_Impact_Assessment_Category__c.field-meta.xml
<CustomField>
    <fullName>aig_Impact_Assessment_Category__c</fullName>
    <label>Impact Assessment Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rights-Impacting</fullName>
            </value>
            <value>
                <fullName>Safety Impacting</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Neither</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>