force-app/main/default/objects/aig_AI_Use_Case__c/fields/aig_Implementation_Source__c.field-meta.xml
<CustomField>
    <fullName>aig_Implementation_Source__c</fullName>
    <label>Implementation Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COTS</fullName>
            </value>
            <value>
                <fullName>Open Source</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Neither</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>