force-app/main/default/objects/aig_AI_Use_Case__c/fields/aig_Num_of_Stakeholder__c.field-meta.xml
<CustomField>
    <fullName>aig_Num_of_Stakeholder__c</fullName>
    <label># of Stakeholder</label>
    <summaryForeignKey>aig_AI_Use_Case_Stakeholder__c.aig_AI_Use_Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>