force-app/main/default/objects/aig_AI_Use_Case__c/fields/aig_Objective__c.field-meta.xml
<CustomField>
    <fullName>aig_Objective__c</fullName>
    <inlineHelpText>Specific, clear, and actionable goal that the AI use case aims to achieve</inlineHelpText>
    <label>Objective</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>