force-app/main/default/objects/aig_AI_Use_Case__c/fields/aig_Overview__c.field-meta.xml
<CustomField>
    <fullName>aig_Overview__c</fullName>
    <description>High level description of use case</description>
    <label>Overview</label>
    <length>255</length>
    <type>Text</type>
</CustomField>