force-app/main/default/objects/aig_AI_Use_Case__c/fields/aig_Private__c.field-meta.xml
<CustomField>
    <fullName>aig_Private__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Private</label>
    <type>Checkbox</type>
</CustomField>