force-app/main/default/objects/aig_AI_Use_Case__c/fields/aig_Regulatory_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>aig_Regulatory_Evaluation__c</fullName>
    <inlineHelpText>To what extent has the entity defined and documented the regulatory environment, including applicable requirements in laws and regulations?</inlineHelpText>
    <label>Regulatory Evaluation</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>