force-app/main/default/objects/aig_AI_Use_Case__c/fields/aig_Stage_of_Development__c.field-meta.xml
<CustomField>
    <fullName>aig_Stage_of_Development__c</fullName>
    <label>Stage of Development</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initiation</fullName>
            </value>
            <value>
                <fullName>Development and Acquisition</fullName>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>Operation and Maintenance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>