force-app/main/default/objects/aig_AI_Use_Case__c/fields/aig_Sub_Account__c.field-meta.xml
<CustomField>
    <fullName>aig_Sub_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub-Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.ParentId</field>
            <operation>equals</operation>
            <valueField>$Source.aig_Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AI Use Cases (Sub-Account)</relationshipLabel>
    <relationshipName>aig_AI_Use_Cases_for_SubAccount</relationshipName>
    <type>Lookup</type>
</CustomField>