force-app/main/default/objects/aig_AI_Use_Case__c/fields/Cloned_From__c.field-meta.xml
<CustomField>
    <fullName>Cloned_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cloned From</label>
    <referenceTo>aig_AI_Use_Case__c</referenceTo>
    <relationshipLabel>Cloned Use Cases</relationshipLabel>
    <relationshipName>ClonedUseCases</relationshipName>
    <type>Lookup</type>
</CustomField>