force-app/main/default/objects/aig_AI_Use_Case__c/fields/Private_Reason__c.field-meta.xml
<CustomField>
    <fullName>Private_Reason__c</fullName>
    <label>Private Reason</label>
    <type>TextArea</type>
</CustomField>